<resources>
    <string name="app_name">on.time</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_help">Help</string>
    <string name="remindersIcon">remindersIcon</string>
    <string name="addNoteButton">addNote</string>
    <string name="schedule">Schedule</string>
    <string name="note">Note</string>
    <string name="title">Title</string>
    <string name="noteDescription">Your text</string>
    <string name="noteDate">Date</string>
    <string name="save_note">Save note</string>
    <item name="note_fab_schedule_icon" type="id" />
    <item name="note_fab_note_icon" type="id" />
    <item name="schedule_fab_schedule_icon" type="id" />
    <item name="schedule_fab_note_icon" type="id" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="current_date">MONTH YEAR</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="finish_tick">finish tick</string>
    <string name="full_day">Fullday</string>
    <string name="start_from">Start from</string>
    <string name="finish">Finish</string>
    <string name="repeat">Repeat</string>
    <string name="reminder">Reminder</string>
    <string name="place">Place</string>
    <string name="notes">Notes</string>
    <string name="time">Time</string>
    <string name="schedules_isMissing_msg">You Didn’t Have Any Schedule.</string>
    <string name="pinned_icon">pinned icon</string>
    <string name="setting">Setting</string>
    <string name="audio">Audio</string>
    <string name="notification">Notification</string>
    <string name="notification_bar">Notification Bar</string>
    <string name="extras">Extras</string>
    <string name="about">About</string>
    <string name="help">Help</string>

    <string-array name="repeat_items">
        <item>Never</item>
        <item>One time</item>
        <item>Every 5 min</item>
        <item>Every 30 min</item>
        <item>Every hour</item>
    </string-array>

    <string-array name="reminder_items">
        <item>No</item>
        <item>Before 5 min</item>
        <item>Before 30 min</item>
        <item>Before 3 hour</item>
        <item>Before day</item>
    </string-array>
    <string-array name="month_names_en">
        <item>JANUARY</item>
        <item>FEBRUARY</item>
        <item>MARCH</item>
        <item>APRIL</item>
        <item>MAY</item>
        <item>JUNE</item>
        <item>JULY</item>
        <item>AUGUST</item>
        <item>SEPTEMBER</item>
        <item>OCTOBER</item>
        <item>NOVEMBER</item>
        <item>DECEMBER</item>
    </string-array>
    <string-array name="month_short_names_en">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string-array name="month_names_rus">
        <item>ЯНВАРЬ</item>
        <item>ФЕВРАЛЬ</item>
        <item>МАРТ</item>
        <item>АПРЕЛЬ</item>
        <item>МАЙ</item>
        <item>ИЮНЬ</item>
        <item>ИЮЛЬ</item>
        <item>АВГУСТ</item>
        <item>СЕНТЯБРЬ</item>
        <item>ОКТЯБРЬ</item>
        <item>НОЯБРЬ</item>
        <item>ДЕКАБРЬ</item>
    </string-array>
    <string-array name="month_short_names_rus">
        <item>июл.</item>
        <item>фев.</item>
        <item>мар.</item>
        <item>апр.</item>
        <item>мая</item>
        <item>июн.</item>
        <item>июл.</item>
        <item>авг.</item>
        <item>сен.</item>
        <item>окт.</item>
        <item>ноя.</item>
        <item>дек.</item>
    </string-array>
</resources>