<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="@drawable/bg_gradient"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/settings_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting"
        android:textSize="16sp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/settings_notificationHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification"
        android:textSize="18sp"
        android:layout_marginTop="26dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_header" />

    <View
        android:id="@+id/settings_notificationUnderline"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_notificationHeader"
        android:background="@color/light_gray"
        android:layout_marginTop="10dp"/>
    
    <TextView
        android:id="@+id/settings_audioHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/audio"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_notificationUnderline"
        android:layout_marginTop="10dp" />

    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_notificationContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_audioHeader"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/settings_BarHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification_bar"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/settings_extrasHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/extras"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_notificationContainer"
        android:layout_marginTop="26dp"/>

    <View
        android:id="@+id/settings_extrasUnderline"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_extrasHeader"
        android:background="@color/light_gray"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/settings_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_extrasUnderline"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/settings_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_help"
        android:layout_marginTop="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>