<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    android:theme="@style/Theme.ToDo"
    tools:context=".ScheduleActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/upBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/upbar_finishTick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/tick_icon"
            android:contentDescription="@string/finish_tick" />

        <CheckBox
            android:id="@+id/upbar_closeCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toStartOf="@+id/upbar_finishTick"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/schedule_structure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/upBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="15dp">

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/schedule" />

        <EditText
            android:id="@+id/titleName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/header"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:paddingHorizontal="12dp"
            android:textColorHint="@color/dark_gray"
            android:inputType="date"
            android:hint="@string/title"
            android:autofillHints=""
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_bg"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/structure_fullday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/titleName"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintEnd_toEndOf="parent" >

            <TextView
                android:id="@+id/fullday_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/full_day" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/fullday_switch"
                android:layout_width="wrap_content"
                android:layout_height="15dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/structure_startFrom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/structure_fullday"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintEnd_toEndOf="parent" >

            <TextView
                android:id="@+id/startDate_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/start_from" />

            <EditText
                android:id="@+id/startFrom_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="24dp"
                android:text="Date and time of start"
                android:clickable="true"
                android:focusable="false"
                android:autofillHints=""
                android:inputType="datetime" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/structure_finishDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/structure_startFrom"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintEnd_toEndOf="parent" >

            <TextView
                android:id="@+id/finishDate_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/finish" />

            <EditText
                android:id="@+id/finishFrom_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="24dp"
                android:clickable="true"
                android:focusable="false"
                android:autofillHints=""
                android:text="Date and time of finish"
                android:inputType="datetime" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/structure_repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/structure_finishDate"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintEnd_toEndOf="parent" >

            <TextView
                android:id="@+id/repeat_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/repeat" />

            <Spinner
                android:id="@+id/repeat_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="24dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/structure_reminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/structure_repeat"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintEnd_toEndOf="parent" >

            <TextView
                android:id="@+id/reminder_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/reminder" />

            <Spinner
                android:id="@+id/reminder_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="24dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/place_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/structure_reminder"
            android:inputType="date"
            android:background="@drawable/edit_text_bg"
            android:paddingHorizontal="12dp"
            android:textColorHint="@color/dark_gray"
            android:autofillHints=""
            android:hint="@string/place"/>

        <EditText
            android:id="@+id/description_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/place_edit"
            android:inputType="date"
            android:background="@drawable/edit_text_bg"
            android:paddingHorizontal="12dp"
            android:textColorHint="@color/dark_gray"
            android:hint="@string/notes"
            android:autofillHints="" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>