<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/note_edit_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/noteBackground"
    tools:context=".NoteEdit">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/note_edit_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/Theme.ToDo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/main_menu"
        app:titleTextColor="@color/white">

        <ImageView
            android:id="@+id/note_edit_toolbar_fixIcon"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/remindersIcon"
            android:src="@drawable/fix_icon"
            />
    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/note_data_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintTop_toBottomOf="@+id/note_edit_toolbar">

        <EditText
            android:id="@+id/edit_note_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:inputType="textMultiLine"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:background="@null"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/noteTitle"
            android:textColorHint="@color/white"
            android:importantForAutofill="no"
            tools:targetApi="o"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/edit_note_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:text="@string/noteDescription"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:background="@null"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_note_title"
            android:hint="@string/noteDescription"
            android:textColorHint="@color/white"
            android:importantForAutofill="no"
            tools:targetApi="o"
            tools:ignore="LabelFor" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/saveNoteFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="10dp"
        android:contentDescription="@string/save_note"
        android:backgroundTint="@color/teal_200"
        android:src="@drawable/save_icon"/>

</androidx.constraintlayout.widget.ConstraintLayout>